# rookie-numbers

./: Cargo.toml  README.md
.trunk/: trunk.yaml
.trunk/configs/: .rustfmt.toml
crates/air/: Cargo.toml
crates/air/src/: interactions.rs  lib.rs  preprocessed.rs  relations.rs
crates/air/src/components/: memory.rs  mod.rs  multiple_constraints.rs  single_constraint.rs  single_constraint_with_relation.rs
crates/prover/: Cargo.toml
crates/prover/benches/: example.rs
crates/prover/src/: prover.rs
crates/prover/tests/: prover.rs
crates/rookie/: Cargo.toml
crates/rookie/benches/: frequency.rs
crates/rookie/src/: lib.rs  prover.rs
crates/rookie/src/air/: components.rs
crates/rookie/tests/: prover.rs
crates/sha256/: Cargo.toml
crates/sha256/benches/: sha256.rs
crates/sha256/src/: design.py  lib.rs  macros.rs  partitions.rs  relations.rs  sha256.rs
crates/sha256/src/components/: mod.rs  scheduling.rs
crates/sha256/src/components/compression/: air.rs  columns.rs  mod.rs  witness.rs
crates/sha256/src/components/preprocessed/: mod.rs
crates/sha256/src/components/preprocessed/big_sigma_0/i0_i1/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/big_sigma_0/o2/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/big_sigma_1/: mod.rs
crates/sha256/src/components/preprocessed/big_sigma_1/i0/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/big_sigma_1/i1/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/big_sigma_1/o2/: air.rs  witness.rs
crates/sha256/src/components/preprocessed/ch_left/i0/: air.rs  witness.rs
crates/sha256/src/components/preprocessed/ch_left/i1/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/ch_right/: mod.rs
crates/sha256/src/components/preprocessed/ch_right/i0/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/ch_right/i1/: air.rs  witness.rs
crates/sha256/src/components/preprocessed/maj/: mod.rs
crates/sha256/src/components/preprocessed/maj/i0h0_i1l0/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/maj/i0h1_i1l1/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/maj/i0l_i1h/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/range_check_add/: air.rs  columns.rs  mod.rs  witness.rs
crates/sha256/src/components/preprocessed/sigma_0/: mod.rs
crates/sha256/src/components/preprocessed/sigma_0/i0_i1/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/sigma_0/o2/: air.rs  witness.rs
crates/sha256/src/components/preprocessed/sigma_0_i0_i1/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/sigma_1/i0_i1/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/preprocessed/sigma_1/o2/: air.rs  columns.rs  witness.rs
crates/sha256/src/components/scheduling/: air.rs  columns.rs  mod.rs  witness.rs
crates/sha256/src/preprocessed/: big_sigma_0.rs  big_sigma_1.rs  ch_left.rs  ch_right.rs  maj.rs  mod.rs  range_check_add.rs  sigma_0.rs  sigma_1.rs
crates/utils/: Cargo.toml
crates/utils/benches/: aligned_vec.rs
crates/utils/src/: lib.rs
crates/utils/src/simd/: macros.rs  mod.rs
crates/utils/src/stwo/: macros.rs
crates/vm/: Cargo.toml
crates/vm/benches/: example.rs
crates/vm/src/: errors.rs  prover.rs
crates/vm/src/air/: mod.rs  preprocessed.rs  relations.rs
crates/vm/src/air/components/: memory.rs  mod.rs  multiple_constraints.rs  single_constraint.rs  single_constraint_with_relation.rs
crates/vm/tests/: prover.rs
