[workspace]
members = [
    "crates/prover",
    "crates/air",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d", features = [
    "parallel",
], default-features = false }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d" }
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
air = { path = "crates/air" }
num-traits = "0.2.19"
rand = "0.8.5"
