[workspace]
members = ["crates/vm", "crates/sha256"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "411d8c6a0142912d75fb38a5f28a767ef9dfb350", features = [
] }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "411d8c6a0142912d75fb38a5f28a767ef9dfb350" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "411d8c6a0142912d75fb38a5f28a767ef9dfb350" }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", rev = "411d8c6a0142912d75fb38a5f28a767ef9dfb350", features = [
  "prover",
  "std",
] }
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
num-traits = "0.2.19"
rand = "0.8.5"
thiserror = { version = "2.0.10", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
bincode = "1.3.3"
itertools = "0.13.0"
paste = "1.0"
test-log = { version = "0.2.18", features = ["trace"] }
peak_alloc = { version = "0.2" }
sha2 = "0.10.8"

[profile.test]
overflow-checks = false
