[package]
name = "prover"
version.workspace = true
edition.workspace = true

[dependencies]
stwo-prover.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
air.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "example"
harness = false
